--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -147,7 +147,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/jardin_du_luxembourg.jpg) no-repeat bottom center scroll;
+    background: url(../img/jardin_du_luxembourg.JPG) no-repeat bottom center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -269,7 +269,7 @@ a:focus {
     width: 100%;
     padding: 50px 0;
     color: #fff;
-    background: url(../img/eiffel_tower.jpg) no-repeat center center scroll;
+    background: url(../img/eiffel_tower.JPG) no-repeat center center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
