--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -268,6 +268,7 @@ a:focus {
 #contact {
     width: 100%;
     padding: 50px 0;
+    margin-top: 200px;
     color: #fff;
     background: url(../img/eiffel_tower.JPG) no-repeat center center scroll;
     background-color: #000;
@@ -386,4 +387,8 @@ body {
 
 #skills img {
     height: 100px;
+}
+
+ul.list-inline.banner-social-buttons li {
+  background: black;
 }
