--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -187,6 +187,11 @@ a:focus {
     }
 }
 
+#about {
+  background: url("../img/beach.JPG") no-repeat top center scroll;
+  text-shadow: 2px 2px black;
+}
+
 .btn-circle {
     width: 70px;
     height: 70px;
