--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -187,8 +187,9 @@ a:focus {
     }
 }
 
-#about {
-  background: url("../img/beach.JPG") no-repeat top center scroll;
+#experience {
+  background: url(../img/Peer.JPG) no-repeat scroll;
+  background-size: contain;
   text-shadow: 2px 2px black;
 }
 
@@ -291,7 +292,7 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 250px;
+        padding-top: 150px;
     }
 
     .download-section {
